--- a/Gallery.html
+++ b/Gallery.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+        <html lang="en">
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>sweetly web pribadi</title>
+                <link rel="stylesheet" href="styles 2.css ">
+               
+    
+            </head>
 
+            <body>
+
+
+                    <h1>Korean pop</h1>      
+                    <a href="index.html" target="situs pertama">
+                        <button class="button">Home</button>
+                    </a>
+                    <a href="Gallery.html" target="situs kedua">
+                        <button class="button">Gallery</button>
+                    </a>
+                    <a href="Blog.html" target="situs kedua">
+                    <button class="button">Blog</button>
+                    </a>
+                    <a href="Contact.html" target="situs kedua">
+                    <button class="button">Contact</button>
+                    </a>
+
+                <h1>Gallery</h1>
+        <div class="gallery">
+        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korea.jpg" alt="image">
+        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean exo.jpg" alt="image">
+        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean kpop.jpg" alt="image">
+        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean.jpg" alt="image">
+        </div>
+
+
+            </body>
+        </html>
