--- a/Gallery.html
+++ b/Gallery.html
@@ -27,9 +27,9 @@
                     </a>
 
                 <h1>Gallery</h1>
-        <div class="gallery">
+        <div class="Gallery">
         <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korea.jpg" alt="image">
-        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean exo.jpg" alt="image">
+        <img src="c:\\ACER\OneDrive\Documents\Tugas pemrograman web\korean exo.jpg" alt="image">
         <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean kpop.jpg" alt="image">
         <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean.jpg" alt="image">
         </div>
