--- a/Gallery.html
+++ b/Gallery.html
@@ -4,7 +4,7 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>sweetly web pribadi</title>
-                <link rel="stylesheet" href="styles 2.css ">
+                <link rel="stylesheet" href="styles 2.css">
                
     
             </head>
@@ -27,11 +27,11 @@
                     </a>
 
                 <h1>Gallery</h1>
-        <div class="Gallery">
-        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korea.jpg" alt="image">
-        <img src="c:\\ACER\OneDrive\Documents\Tugas pemrograman web\korean exo.jpg" alt="image">
-        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean kpop.jpg" alt="image">
-        <img src="c:\Users\ACER\OneDrive\Documents\Tugas pemrograman web\korean.jpg" alt="image">
+        <div class="gallery">
+        <img src="korea.jpg" alt="image">
+        <img src="korean exo.jpg" alt="image">
+        <img src="korean kpop.jpg" alt="image">
+        <img src="korean.jpg" alt="image">
         </div>
 
 
