--- a/Gallery.html
+++ b/Gallery.html
@@ -14,16 +14,16 @@
 
                     <h1>Korean pop</h1>      
                     <a href="index.html" target="situs pertama">
-                        <button class="button">Home</button>
+                        <button class="button">🏠</button>
                     </a>
                     <a href="Gallery.html" target="situs kedua">
-                        <button class="button">Gallery</button>
+                        <button class="button">🖼</button>
                     </a>
                     <a href="Blog.html" target="situs kedua">
-                    <button class="button">Blog</button>
+                    <button class="button">📝</button>
                     </a>
                     <a href="Contact.html" target="situs kedua">
-                    <button class="button">Contact</button>
+                    <button class="button">☎</button>
                     </a>
 
                 <h1>Gallery</h1>
