--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>sweetly web pribadi</title>
         <link rel="stylesheet" href="styles.css">
-        
+        <script src="script.js"></script>
     </head>
 
     <body>
@@ -29,7 +29,9 @@
                 <li> <a href="https://wa.me/6281342479228">Whatsapp</a> </li>
             </ul>
 
-            <p>Jika ada keperluan silahkan hubungi kontak di atas 🫂 </p>
+            <p>Jika ada keperluan silahkan hubungi kontak di atas :) </p>
+
+            
 
     </body>
 </html>
