--- a/Blog.html
+++ b/Blog.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>sweetly web pribadi</title>
         <link rel="stylesheet" href="styles 1.css ">
-        
+        <script src="script 1.js"></script>
     </head>
 
     <body>
