--- a/Gallery.html
+++ b/Gallery.html
@@ -5,6 +5,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>sweetly web pribadi</title>
                 <link rel="stylesheet" href="styles 2.css">
+                <script src="script 2.js"></script>
                
     
             </head>
@@ -34,6 +35,5 @@
         <img src="korean.jpg" alt="image">
         </div>
 
-
-            </body>
-        </html>
+  </body>
+</html>
